fixed arrow staying on top on mobile

--- a/src/assets/theme/src/components/_map.sass
+++ b/src/assets/theme/src/components/_map.sass
@@ -787,7 +787,7 @@
 	right: 0
 	top: 121px
 	background-color: #978585
-	z-index: 99999
+	z-index: 9999
 	@apply rounded-bl-full
 	@apply rounded-tl-full
 
